dpf-ax changelog

	by <hackfin@section5.ch>
	Find details in the git or svn logs.

Mon, 23 Apr 2012
v0.205devel by superelchi
	* Fixed fw compatibility issue with 0.1alpha dpflib (segfault)

Sat, 21 Apr 2012
v0.204devel by superelchi
	* Integration of new models rewritten
	* New models:
	  - agk_violet
	  - focalprice144
	  
Tue, 17 Apr 2012
v0.203devel by superelchi
	* Added hiddetach (crude replacement for libhid-detach-device).
	* Added identify.py (new kind of dpf detection).
	* Added a more pragmatic approach for integrating new LCD models.
	* New supported model:
	  - linkdelight
	  
Sun, 01 Apr 2012 14:51:00 +0200
v0.202devel by superelchi
	* Added support for ProgSPI flashing

Tue, 13 Mar 2012 17:53:53 +0100
v0.2develop
	Standalone firmware that requires no hack. Added:
	* Added bootloader mode downloading and flashing options to dpflib
	* Bootstrapping code
	* Bootblock and jump table generation to compile.py

Mon, 11 Apr 2011 11:55:52 +0200
v0.11alpha
	* Actually starting a changelog
	* This is a full firmware replacement, but we still talk about a
	  "hack". 
	LCD4linux (dpflib):
	* Changed resolution query
	* Support for orientation and backlight control
	* Allow addressing of several frames ("Port" statement)
	Firmware:
	* Support for USB communication with restricted command set
	  (kinda compatible to 0.1alpha)
	* Support for various LCD controllers/screens (Sitronix, Orisetech,
	  Ilitek, etc.)
	* Locked flash access ('no-brick' mode for future upgrades)
	* Power down mode: Full "deep sleep" with only RTC running
	* Auto power down on low power
	* Optional/experimental:
		- Log ADC values to log sector on flash
		- ADC voltage drawing over time (Menu: "Mon")
		- Better Load/Exec support to download applets into the DPF via USB
	* Frame specific issues:
	    - The default orientation of the Pearl 320x240 frame was changed such
	      that the USB connector is pointing down on normal display (i.e. we